# sqlIDE

./: .gitattributes  .gitignore  LICENSE  README.md  RELEASE_PREP.md  index.html  mariadb-linux-x86_64-minimal-10.6.24.tar.xz.sha256  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
bundled/: mariadb-minimal.tar.xz
scripts/: create-minimal-archive.sh  download-mariadb.sh  generate-icons.sh  generate-mycnf.sh  git-tags.sh  make-minimal-mariadb.sh  mariadb-install-db  package-minimal-mariadb.sh  prune-to-minimal.sh  remove-project-mariadb.sh  test-bundle-install.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled/: .gitkeep
src-tauri/bundled/mariadb/: .gitkeep
src-tauri/bundled/mariadb/linux-x86_64/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project_commands.rs
src-tauri/src/database/: connection.rs  mod.rs  parser.rs
src-tauri/src/files/: mod.rs
src-tauri/src/mermaid/: mod.rs
src-tauri/src/types/: mod.rs
src/components/: ErGenerator.tsx  LocalServerButton.tsx  MariaDbManager.tsx  MermaidDiagram.tsx
src/components/editor/: DatabaseExplorer.tsx  DiagramSettings.tsx  EditorTabBar.tsx  EmbeddedErDiagram.tsx  ProjectManager.tsx  ResultsPanel.tsx  Sidebar.tsx  SqlEditor.tsx
src/components/pages/: ConnectionManagerPage.tsx  EditorPage.tsx  MariaDbManagementPage.tsx  WelcomePage.tsx
src/services/: database.ts  files.ts
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
(+21 files in other folders)
